sort button alignment fixes done

--- a/src/app/shared/bar-chart/bar-chart.component.scss
+++ b/src/app/shared/bar-chart/bar-chart.component.scss
@@ -3,7 +3,6 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    margin: auto;
     background: #CC0022;
     color: white;
     font-weight: 400;
@@ -13,4 +12,15 @@ mat-icon {
     top: 50%;
     width: 8px;
     transform: translateY(12%);
+}
+
+.sort-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+:host ::ng-deep .textDataLabel {
+    font-size: 14px !important;
 }
